fix: logout outline removed on ios

--- a/src/styles/searchview.scss
+++ b/src/styles/searchview.scss
@@ -1,16 +1,29 @@
 .searchView {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   overflow: hidden;
 
   header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 147px;
     min-height: 90px;
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
     border-bottom: 1px solid #a3a3a3;
     font-weight: bold;
     background-color: white;
@@ -18,7 +31,9 @@
     border-bottom-right-radius: 25px;
 
     #searchField {
-      flex: 5;
+      -webkit-box-flex: 5;
+          -ms-flex: 5;
+              flex: 5;
 
       .inp {
         position: relative;
@@ -37,7 +52,11 @@
           left: 30px;
           font-size: 16px;
           color: black;
-          transform-origin: 0 0;
+          -webkit-transform-origin: 0 0;
+              -ms-transform-origin: 0 0;
+                  transform-origin: 0 0;
+          -webkit-transition: all 0.2s ease;
+          -o-transition: all 0.2s ease;
           transition: all 0.2s ease;
         }
 
@@ -61,12 +80,16 @@
           font-size: large;
           background: none;
           color: #223254;
+          -webkit-transition: all 0.15s ease;
+          -o-transition: all 0.15s ease;
           transition: all 0.15s ease;
           margin-left: 20px;
 
           &:not(:placeholder-shown) + span {
             color: #5a667f;
-            transform: translateY(-26px) scale(0.75);
+            -webkit-transform: translateY(-26px) scale(0.75);
+                -ms-transform: translateY(-26px) scale(0.75);
+                    transform: translateY(-26px) scale(0.75);
           }
           &:focus {
             background: none;
@@ -74,17 +97,23 @@
           }
           &:focus + span {
             color: #07f;
-            transform: translateY(-26px) scale(0.75);
+            -webkit-transform: translateY(-26px) scale(0.75);
+                -ms-transform: translateY(-26px) scale(0.75);
+                    transform: translateY(-26px) scale(0.75);
           }
           &:focus + span + .border {
-            transform: scaleX(1);
+            -webkit-transform: scaleX(1);
+                -ms-transform: scaleX(1);
+                    transform: scaleX(1);
           }
         }
       }
     }
 
     #goBtn {
-      flex: 1 1;
+      -webkit-box-flex: 1;
+          -ms-flex: 1 1;
+              flex: 1 1;
       height: 100%;
 
       button {
@@ -99,12 +128,21 @@
   }
 
   #main {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: calc(100% - 150px);
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     @media only screen and (min-width: 500px) {
-      align-self: center;
+      -ms-flex-item-align: center;
+          -ms-grid-row-align: center;
+          align-self: center;
       width: 55vw;
     }
 
@@ -122,8 +160,10 @@
     width: 60px;
     height: 60px;
     border-top-left-radius: 50px;
+    -webkit-transition: ease 0.2s all;
+    -o-transition: ease 0.2s all;
     transition: ease 0.2s all;
-    outline-color: transparent;
+    outline: none;
 
     &.open {
       width: 150px;
@@ -148,6 +188,8 @@
 }
 
 svg {
+  -webkit-transition: ease 0.3s all;
+  -o-transition: ease 0.3s all;
   transition: ease 0.3s all;
 }
 
